--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "express": "^4.18.2",
     "guid": "^0.0.12",
     "http": "^0.0.1-security",
-    "mongoose": "^7.5.0"
+    "md5": "^2.3.0",
+    "mongoose": "^7.5.0",
+    "sendgrid": "^2.0.0"
+
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
